--- a/Part 1 Fix Identation.html
+++ b/Part 1 Fix Identation.html
@@ -8,3 +8,35 @@
     <p>I love HTML!</p>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Basic II</title>
+</head>
+<body>
+    <table> 
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Password</th>
+        </tr>
+        <tr>
+            <td>Brendan</td>
+            <td>Stanton</td>
+            <td>brendanrocks@gmail.com</td>
+            <td>FakePassword123</td>
+        </tr>
+    </table>
+    
+    <h1>Here is a list of my favorite things:</h1>
+        <ul>
+            <li>Food</li>
+            <li>Bandwidth</li>
+            <li>Coffee</li>
+            <li>Beach</li>
+        </ul>
+</body>
+</html>
